--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(stack_lab)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(stack_lab main.cpp Stack.cpp Stack.h StackImplementation.h ListStack.cpp ListStack.h VectorStack.cpp VectorStack.h
-        Vector.h Vector.cpp)
+add_executable(stack_lab main.cpp Stack.cpp Stack.h StackImplementation.h ListStack.cpp ListStack.h VectorStack.cpp
+        VectorStack.h Vector.h Vector.cpp)
